# db-tools-mcp

./: .gitignore  AGENTS.md  README.md  config.example.yaml  config.yaml  mcp_server.py  mcp_server_v2.py  pyproject.toml  refresh.ps1  refresh_metadata.py  requirements.txt  server.ps1
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/agents/: extractor-maintainer.agent.md
.github/workflows/: publish.yml  test-publish.yml
src/db_tools/: __init__.py  _config.py  _extractor.py  server.py
tests/: conftest.py  test_config.py  test_extractor.py  test_server.py
